# tui-journal

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.ron  CHANGELOG.rst  CITATION.cff  Cargo.toml  LICENSE  Makefile  README.md  THEMES.md  build.rs  entries.json
.ai/workflows/: release.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: changelog-assembly.yml  cleanup_cache.yml  comment-changes.txt  comment-changes.yml  homebrew.yml  main.yml  release.yml  release.yml.depricated
backend/: Cargo.toml  build.rs
backend/src/: json.rs  json_data_provider.rs  lib.rs  sqlite.rs  vjournal.rs
backend/src/file/: entry.rs  header.rs  mod.rs  path.rs  provider.rs  util.rs
backend/src/sqlite/: mod.rs  sqlite_helper.rs
backend/src/sqlite/migrations/: 20230509041613_init_entries.sql  20230613041405_add_tags.sql  20240104160740_entries_priorities.sql  20260403224000_add_folder_column.sql
backend/tests/: backend.rs  common.rs  json.rs
backend/tests/json/: mod.rs  temp_file.rs
backend/tests/sqlite/: mod.rs
backend/tests/vjournal/: mod.rs
changelog.d/: 20230608_173148_Ammar_Abou_Zor_main.ron  20230609_072409_Kevin_Matthes_comment-changes.ron  20230609_155121_Kevin_Matthes_update-cargo-install.ron  20230609_170849_GitHub_Actions_main.ron  20230610_181451_GitHub_Actions_main.ron  20230610_184537_GitHub_Actions_main.ron  20230610_193939_GitHub_Actions_main.ron  20230611_094559_GitHub_Actions_main.ron  20230611_193843_GitHub_Actions_main.ron  20230617_042032_GitHub_Actions_main.ron  20230617_044830_GitHub_Actions_main.ron  20230617_162911_GitHub_Actions_main.ron  20230617_192607_GitHub_Actions_main.ron  20230618_195102_GitHub_Actions_main.ron  20230620_043802_GitHub_Actions_main.ron  20230622_050423_GitHub_Actions_main.ron  20230622_163518_GitHub_Actions_main.ron  20230622_185317_GitHub_Actions_main.ron  20230624_184745_GitHub_Actions_main.ron  20230630_103448_GitHub_Actions_main.ron  20230630_103653_GitHub_Actions_main.ron  20230703_094817_GitHub_Actions_main.ron  20230707_194101_GitHub_Actions_main.ron  20230711_192840_GitHub_Actions_main.ron  20230713_174946_GitHub_Actions_main.ron  20230716_051235_GitHub_Actions_main.ron  20230721_150313_GitHub_Actions_main.ron  20230724_181903_GitHub_Actions_main.ron  20230816_173136_GitHub_Actions_main.ron  20230818_153258_GitHub_Actions_main.ron  20230828_114600_GitHub_Actions_main.ron  20230924_185853_GitHub_Actions_main.ron  20230926_192038_GitHub_Actions_main.ron  20231002_072139_GitHub_Actions_main.ron  20231002_092338_GitHub_Actions_main.ron  20231003_100759_GitHub_Actions_main.ron  20231007_115239_GitHub_Actions_main.ron  20231007_193109_GitHub_Actions_main.ron  20231008_102025_GitHub_Actions_main.ron  20231010_185302_GitHub_Actions_main.ron  (+13 more)
src/: app.rs  cli.rs  logging.rs  main.rs  settings.rs
src/app/: colored_tags.rs  commands.rs  external_editor.rs  filter.rs  history.rs  keymap.rs  mod.rs  redo.rs  runner.rs  settings.rs  sorter.rs  state.rs  tag_tree.rs  test.rs  undo.rs
src/app/commands/: mod.rs
src/app/filter/: criterion.rs  mod.rs
src/app/test/: filter.rs  mock.rs  mod.rs  undo_redo.rs
src/app/ui/: entriesList.rs  entries_list.rs  entry_content.rs  footer.rs  help_popup.rs  mod.rs  rename_folder_popup.rs  ui_functions.rs
src/app/ui/commands/: editor_cmd.rs  entries_list_cmd.rs  global_cmd.rs  mod.rs  multi_select_cmd.rs
src/app/ui/editor/: command_actions.rs  mod.rs
src/app/ui/entries_list/: command_actions.rs  mod.rs
src/app/ui/entry_content/: command_actions.rs  mod.rs
src/app/ui/entry_popup/: folders.rs  mod.rs  tags.rs
src/app/ui/export_popup/: mod.rs
src/app/ui/filter_popup/: mod.rs
src/app/ui/fuzz_find/: mod.rs
src/app/ui/help_popup/: global_bindings.rs  keybindings_table.rs  mod.rs  multi_select_bindings.rs
src/app/ui/msg_box/: mod.rs
src/app/ui/sort_popup/: mod.rs
src/app/ui/themes/: editor_styles.rs  general_styles.rs  journals_list_styles.rs  mod.rs  msgbox.rs  serialization.rs  style.rs
src/app/ui/view_mode_popup/: mod.rs
src/cli/: commands.rs  mod.rs
src/data/: json_data_provide.rs  json_data_provider.rs  mod.rs
src/settings/: auto_title.rs  export.rs  external_editor.rs  file_backend.rs  json_backend.rs  mod.rs  sqlite_backend.rs  vjournal_backend.rs
