[package]
name = "tui-journal"
version = "0.8.2"
edition = "2021"
authors = ["Ammar Abou Zor"]
license = "MIT"
description = "Tui app allows writing and managing journals/notes from within the terminal With different local back-ends"
repository = "https://github.com/ammarabouzor/tui-journal"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["tui", "terminal-app", "journal", "cli", "ui"]
rust-version = "1.75.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
log = "0.4.20"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.0", features = ["derive"] }
crossterm = {version =  "0.27.0", features = ["event-stream"]}
directories = "5.0.0"
simplelog = "0.12.1"
textwrap = "0.16.0"
thiserror = "1.0.57"
toml = "0.8.10"
sqlx = {version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono"], optional = true}
futures-util = { version = "0.3", default-features = false }

scopeguard = "1.2.0"
git2 = { version = "0.18.2", default-features = false }
rayon = "1.8.1"
fuzzy-matcher = "0.3.7"
path-absolutize = "3.1.1"
tui-textarea = "0.4.0"
ratatui = { version = "0.26.1", features = ["all-widgets"]}
arboard = { version = "3.3.0", default-features = false, features = ["wayland-data-control"]}

[features]
default = ["json", "sqlite"]
json =[]
sqlite = ["dep:sqlx"]

[[bin]]
name = "tjournal"
path = "src/main.rs"

[lib]
name = "backend"
path = "backend/src/lib.rs"

[[test]]
name = "backend"
path = "backend/tests/backend.rs"
