[package]
name = "tui-journal"
version = "0.9.1"
edition = "2021"
authors = ["Ammar Abou Zor"]
license = "MIT"
description = "Tui app allows writing and managing journals/notes from within the terminal With different local back-ends"
repository = "https://github.com/ammarabouzor/tui-journal"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["tui", "terminal-app", "journal", "cli", "ui"]
rust-version = "1.75.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.124"
log = "0.4.22"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive"] }
crossterm = {version =  "0.28.1", features = ["event-stream"]}
directories = "5.0.0"
simplelog = "0.12.2"
textwrap = "0.16.1"
thiserror = "1.0.62"
toml = "0.8.16"
sqlx = {version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite", "chrono"], optional = true}
futures-util = { version = "0.3", default-features = false }

scopeguard = "1.2.0"
git2 = { version = "0.19.0", default-features = false }
rayon = "1.10.0"
fuzzy-matcher = "0.3.7"
path-absolutize = "3.1.1"
tui-textarea = "0.6.1"
ratatui = { version = "0.28.0", features = ["all-widgets"]}
arboard = { version = "3.4.0", default-features = false, features = ["wayland-data-control"]}

[features]
default = ["json", "sqlite"]
json =[]
sqlite = ["dep:sqlx"]

[[bin]]
name = "tjournal"
path = "src/main.rs"

[lib]
name = "backend"
path = "backend/src/lib.rs"

[[test]]
name = "backend"
path = "backend/tests/backend.rs"
