[package]
name = "tui-journal"
version = "0.15.0"
edition = "2024"
authors = ["Ammar Abou Zor"]
license = "MIT"
description = "Tui app allows writing and managing journals/notes from within the terminal With different local back-ends"
repository = "https://github.com/ammarabouzor/tui-journal"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["tui", "terminal-app", "journal", "cli", "ui"]
rust-version = "1.85.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = {version =  "0.28", features = ["event-stream"]}
directories = "5"
simplelog = "0.12"
textwrap = "0.16"
thiserror = "2"
toml = "0.8"
sqlx = {version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"], optional = true}
futures-util = { version = "0.3", default-features = false }
aho-corasick = "1.1"

scopeguard = "1.2"
git2 = { version = "0.19", default-features = false }
rayon = "1.10"
fuzzy-matcher = "0.3"
path-absolutize = "3.1"
tui-textarea = "0.7"
ratatui = { version = "0.29", features = ["all-widgets", "serde"]}
arboard = { version = "3.4", default-features = false, features = ["wayland-data-control"]}

[features]
default = ["json", "sqlite"]
json =[]
sqlite = ["dep:sqlx"]

[[bin]]
name = "tjournal"
path = "src/main.rs"

[lib]
name = "backend"
path = "backend/src/lib.rs"

[[test]]
name = "backend"
path = "backend/tests/backend.rs"
