[package]
name = "backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The backends used tui-journal app to handle the data operations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
chrono.workspace = true
thiserror = "1.0.40"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
log.workspace = true

[features]
default = ["json"]
json = []
